test/expected/declare_rrgi.out
declare x as reference to register int
                          ^
27: error: "register int" is illegal for built-in type since C++17
